--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 .jumbotron{
-background-image: url("Will Landess Kellogg Picture.jpg");
+/*background-image: url("Will Landess Kellogg Picture.jpg");
 background-repeat: no-repeat;
 background-size: auto 100%;
-background-position: left center;
+background-position: left center;*/
 color: black;
 text-align: center;
 }
 
 .btn-primary {
     color: #fff;
-    background-color: red;
-    border-color: red;
+    background-color: navy;
+    border-color: navy;
 }
