--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,5 @@ text-align: center;
     background-color: navy;
     border-color: navy;
 }
+
+/*change color of buttons from green to something else*/
