Jumbotron Google Font
Changed text to Merriweather font from google api

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ background-size: auto 100%;
 background-position: left center;*/
 color: black;
 text-align: center;
+font-family: 'Merriweather', serif;
 }
 
 .btn-primary {
