--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ font-family: 'Merriweather', serif;
     border-color: navy;
 }
 
+.btn-success {
+    color: #fff;
+    background-color: red;
+    border-color: red;
+}
+
 #BainText {
   color: red;
   font-weight: bold;
@@ -27,11 +33,29 @@ font-family: 'Merriweather', serif;
 }
 
 h4 {
-font-family: 'Montserrat', sans-serif;
-color: black;
-font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+  font-weight: bold;
 }
 
 .img-responsive {
-    margin: 0 auto;
+  margin: 0 auto;
+}
+
+#KelloggPic {
+  height: 260px;
+  width: 260px;
+  border-radius: 15%;
+  overflow: hidden;
+}
+.navbar-brand {
+  font-size: 16pt;
+  font-weight: bold;
+  background-color: #98AFC7;
+}
+
+.navbar-nav {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
+  font-size: 16pt;
 }
